# Aeterna-End-K-not

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  CustomRoles.cs  EndKnot.csproj  EndKnot.sln  EndKnot.sln.DotSettings  FUNDING.md  Main.cs  README-EN.md  README.md  SECURITY.md  SUPPORT.md  SubmergedCompatibility.cs  dupes_out.txt  extra-ja.txt  identical-ja.txt  needs-translation.csv  to-translate-sorted.csv
.github/: FUNDING.yml
Gamemodes/: BedWars.cs  CaptureTheFlag.cs  CustomHnS.cs  Deathrace.cs  FreeForAll.cs  HotPotato.cs  KingOfTheZones.cs  Mingle.cs  NaturalDisasters.cs  Quiz.cs  RoomRush.cs  Snowdown.cs  SoloPVP.cs  Speedrun.cs  StopAndGo.cs  TheMindGame.cs
Modules/: AFKDetector.cs  AURoleOptions.cs  Achievements.cs  AddSteamID.cs  AntiBlackout.cs  AutoHaunt.cs  AutoRehost.cs  AutoRestart.cs  BGMInfoDisplay.cs  BGMManager.cs  BackroomsLobby.cs  BanManager.cs  Camouflage.cs  ChaosPotSupport.cs  ChatBubbleShower.cs  CheckAUVersion.cs  ClaudeBridge.cs  ClientControlGUI.cs  ClientOptionItem.cs  CompilerGeneratedObjectWrapper.cs  CustomNetObject.Dossun.cs  CustomNetObject.Dummy.cs  CustomNetObject.ForceField.cs  CustomNetObject.Riptide.cs  CustomNetObject.Sandbox.cs  CustomNetObject.SizeTest.cs  CustomNetObject.WaveCannon.cs  CustomNetObject.cs  CustomRoleSelector.cs  CustomRolesHelper.cs  CustomRpcSender.cs  CustomSabotage.cs  CustomSounds.cs  CustomTeamManager.cs  CustomWinnerHolder.cs  DataFlagRateLimiter.cs  Debugger.cs  (+64 more)
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
(+872 files in other folders)
